[gd_scene load_steps=15 format=4 uid="uid://bnpkpenutpycw"]

[ext_resource type="Texture2D" uid="uid://0o57yvecngbi" path="res://assets/Gray.png" id="1_1o57q"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_hym1v"]
[ext_resource type="Texture2D" uid="uid://bldeowvno638h" path="res://assets/Terrain (16x16).png" id="2_j7psa"]
[ext_resource type="Shader" path="res://shaders/gray_screen.gdshader" id="3_4mdyf"]
[ext_resource type="PackedScene" uid="uid://cv6ctmsqwgw0a" path="res://scenes/player.tscn" id="3_d6513"]
[ext_resource type="PackedScene" uid="uid://by4ugsxp6s5b7" path="res://scenes/collectable_block_1.tscn" id="5_udxbi"]
[ext_resource type="PackedScene" uid="uid://doj22rkprvdac" path="res://scenes/collectable_block_2.tscn" id="7_op5pl"]
[ext_resource type="Texture2D" uid="uid://3c3deruxhkxk" path="res://assets/kloc_za.png" id="7_stwhx"]
[ext_resource type="Texture2D" uid="uid://btmtw6n3q3cjl" path="res://assets/ramka_block.png" id="8_cnjfs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dtvws"]
texture = ExtResource("1_1o57q")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_l5jeb"]
sources/0 = SubResource("TileSetAtlasSource_dtvws")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6862"]
shader = ExtResource("3_4mdyf")
shader_parameter/s_enable = false
shader_parameter/weighted = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ot4bm"]
texture = ExtResource("2_j7psa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_v03er"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_ot4bm")

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_hym1v")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(230, 130)
zoom = Vector2(2.5, 2.5)

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAMAAAABAAAAAAABAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAIAAAABAAMAAAABAAMAAAACAAAAAAACAAAAAAACAAEAAAACAAEAAAACAAIAAAACAAIAAAACAAMAAAACAAMAAAADAAAAAAADAAAAAAADAAEAAAADAAEAAAADAAIAAAADAAIAAAADAAMAAAADAAMAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAIAAAAEAAMAAAAAAAMAAAAFAAAAAAABAAAAAAAFAAEAAAABAAEAAAAFAAIAAAABAAIAAAAFAAMAAAABAAMAAAAGAAAAAAACAAAAAAAGAAEAAAACAAEAAAAGAAIAAAACAAIAAAAGAAMAAAACAAMAAAAHAAAAAAADAAAAAAAHAAEAAAADAAEAAAAHAAIAAAADAAIAAAAHAAMAAAADAAMAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAEAAAAIAAIAAAAAAAIAAAAIAAMAAAAAAAMAAAAJAAAAAAABAAAAAAAJAAEAAAABAAEAAAAJAAIAAAABAAIAAAAJAAMAAAABAAMAAAAKAAAAAAACAAAAAAAKAAEAAAACAAEAAAAKAAIAAAACAAIAAAAKAAMAAAACAAMAAAALAAAAAAADAAAAAAALAAEAAAADAAEAAAALAAIAAAADAAIAAAALAAMAAAADAAMAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAEAAAAMAAIAAAAAAAIAAAAMAAMAAAAAAAMAAAANAAAAAAABAAAAAAANAAEAAAABAAEAAAANAAIAAAABAAIAAAANAAMAAAABAAMAAAAOAAAAAAACAAAAAAAOAAEAAAACAAEAAAAOAAIAAAACAAIAAAAOAAMAAAACAAMAAAAPAAAAAAADAAAAAAAPAAEAAAADAAEAAAAPAAIAAAADAAIAAAAPAAMAAAADAAMAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAEAAAAQAAIAAAAAAAIAAAAQAAMAAAAAAAMAAAARAAAAAAABAAAAAAARAAEAAAABAAEAAAARAAIAAAABAAIAAAARAAMAAAABAAMAAAASAAAAAAACAAAAAAASAAEAAAACAAEAAAASAAIAAAACAAIAAAASAAMAAAACAAMAAAATAAAAAAADAAAAAAATAAEAAAADAAEAAAATAAIAAAADAAIAAAATAAMAAAADAAMAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAEAAAAUAAIAAAAAAAIAAAAUAAMAAAAAAAMAAAAVAAAAAAABAAAAAAAVAAEAAAABAAEAAAAVAAIAAAABAAIAAAAVAAMAAAABAAMAAAAWAAAAAAACAAAAAAAWAAEAAAACAAEAAAAWAAIAAAACAAIAAAAWAAMAAAACAAMAAAAXAAAAAAADAAAAAAAXAAEAAAADAAEAAAAXAAIAAAADAAIAAAAXAAMAAAADAAMAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAEAAAAYAAIAAAAAAAIAAAAYAAMAAAAAAAMAAAAZAAAAAAABAAAAAAAZAAEAAAABAAEAAAAZAAIAAAABAAIAAAAZAAMAAAABAAMAAAAaAAAAAAACAAAAAAAaAAEAAAACAAEAAAAaAAIAAAACAAIAAAAaAAMAAAACAAMAAAAbAAAAAAADAAAAAAAbAAEAAAADAAEAAAAbAAIAAAADAAIAAAAbAAMAAAADAAMAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAEAAAAYAAYAAAAAAAIAAAAYAAcAAAAAAAMAAAAZAAQAAAABAAAAAAAZAAUAAAABAAEAAAAZAAYAAAABAAIAAAAZAAcAAAABAAMAAAAaAAQAAAACAAAAAAAaAAUAAAACAAEAAAAaAAYAAAACAAIAAAAaAAcAAAACAAMAAAAbAAQAAAADAAAAAAAbAAUAAAADAAEAAAAbAAYAAAADAAIAAAAbAAcAAAADAAMAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAIAAAAUAAcAAAAAAAMAAAAVAAQAAAABAAAAAAAVAAUAAAABAAEAAAAVAAYAAAABAAIAAAAVAAcAAAABAAMAAAAWAAQAAAACAAAAAAAWAAUAAAACAAEAAAAWAAYAAAACAAIAAAAWAAcAAAACAAMAAAAXAAQAAAADAAAAAAAXAAUAAAADAAEAAAAXAAYAAAADAAIAAAAXAAcAAAADAAMAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAEAAAAQAAYAAAAAAAIAAAAQAAcAAAAAAAMAAAARAAQAAAABAAAAAAARAAUAAAABAAEAAAARAAYAAAABAAIAAAARAAcAAAABAAMAAAASAAQAAAACAAAAAAASAAUAAAACAAEAAAASAAYAAAACAAIAAAASAAcAAAACAAMAAAATAAQAAAADAAAAAAATAAUAAAADAAEAAAATAAYAAAADAAIAAAATAAcAAAADAAMAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAIAAAAMAAcAAAAAAAMAAAANAAQAAAABAAAAAAANAAUAAAABAAEAAAANAAYAAAABAAIAAAANAAcAAAABAAMAAAAOAAQAAAACAAAAAAAOAAUAAAACAAEAAAAOAAYAAAACAAIAAAAOAAcAAAACAAMAAAAPAAQAAAADAAAAAAAPAAUAAAADAAEAAAAPAAYAAAADAAIAAAAPAAcAAAADAAMAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAEAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAMAAAAJAAQAAAABAAAAAAAJAAUAAAABAAEAAAAJAAYAAAABAAIAAAAJAAcAAAABAAMAAAAKAAQAAAACAAAAAAAKAAUAAAACAAEAAAAKAAYAAAACAAIAAAAKAAcAAAACAAMAAAALAAQAAAADAAAAAAALAAUAAAADAAEAAAALAAYAAAADAAIAAAALAAcAAAADAAMAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAIAAAAEAAcAAAAAAAMAAAAFAAQAAAABAAAAAAAFAAUAAAABAAEAAAAFAAYAAAABAAIAAAAFAAcAAAABAAMAAAAGAAQAAAACAAAAAAAGAAUAAAACAAEAAAAGAAYAAAACAAIAAAAGAAcAAAACAAMAAAAHAAQAAAADAAAAAAAHAAUAAAADAAEAAAAHAAYAAAADAAIAAAAHAAcAAAADAAMAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAMAAAABAAQAAAABAAAAAAABAAUAAAABAAEAAAABAAYAAAABAAIAAAABAAcAAAABAAMAAAACAAQAAAACAAAAAAACAAUAAAACAAEAAAACAAYAAAACAAIAAAACAAcAAAACAAMAAAADAAQAAAADAAAAAAADAAUAAAADAAEAAAADAAYAAAADAAIAAAADAAcAAAADAAMAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAEAAAAAAAoAAAAAAAIAAAAAAAsAAAAAAAMAAAABAAgAAAABAAAAAAABAAkAAAABAAEAAAABAAoAAAABAAIAAAABAAsAAAABAAMAAAACAAgAAAACAAAAAAACAAkAAAACAAEAAAACAAoAAAACAAIAAAACAAsAAAACAAMAAAADAAgAAAADAAAAAAADAAkAAAADAAEAAAADAAoAAAADAAIAAAADAAsAAAADAAMAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAEAAAAEAAoAAAAAAAIAAAAEAAsAAAAAAAMAAAAFAAgAAAABAAAAAAAFAAkAAAABAAEAAAAFAAoAAAABAAIAAAAFAAsAAAABAAMAAAAGAAgAAAACAAAAAAAGAAkAAAACAAEAAAAGAAoAAAACAAIAAAAGAAsAAAACAAMAAAAHAAgAAAADAAAAAAAHAAkAAAADAAEAAAAHAAoAAAADAAIAAAAHAAsAAAADAAMAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAEAAAAIAAoAAAAAAAIAAAAIAAsAAAAAAAMAAAAJAAgAAAABAAAAAAAJAAkAAAABAAEAAAAJAAoAAAABAAIAAAAJAAsAAAABAAMAAAAKAAgAAAACAAAAAAAKAAkAAAACAAEAAAAKAAoAAAACAAIAAAAKAAsAAAACAAMAAAALAAgAAAADAAAAAAALAAkAAAADAAEAAAALAAoAAAADAAIAAAALAAsAAAADAAMAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAEAAAAMAAoAAAAAAAIAAAAMAAsAAAAAAAMAAAANAAgAAAABAAAAAAANAAkAAAABAAEAAAANAAoAAAABAAIAAAANAAsAAAABAAMAAAAOAAgAAAACAAAAAAAOAAkAAAACAAEAAAAOAAoAAAACAAIAAAAOAAsAAAACAAMAAAAPAAgAAAADAAAAAAAPAAkAAAADAAEAAAAPAAoAAAADAAIAAAAPAAsAAAADAAMAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAEAAAAQAAoAAAAAAAIAAAAQAAsAAAAAAAMAAAARAAgAAAABAAAAAAARAAkAAAABAAEAAAARAAoAAAABAAIAAAARAAsAAAABAAMAAAASAAgAAAACAAAAAAASAAkAAAACAAEAAAASAAoAAAACAAIAAAASAAsAAAACAAMAAAATAAgAAAADAAAAAAATAAkAAAADAAEAAAATAAoAAAADAAIAAAATAAsAAAADAAMAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAEAAAAUAAoAAAAAAAIAAAAUAAsAAAAAAAMAAAAVAAgAAAABAAAAAAAVAAkAAAABAAEAAAAVAAoAAAABAAIAAAAVAAsAAAABAAMAAAAWAAgAAAACAAAAAAAWAAkAAAACAAEAAAAWAAoAAAACAAIAAAAWAAsAAAACAAMAAAAXAAgAAAADAAAAAAAXAAkAAAADAAEAAAAXAAoAAAADAAIAAAAXAAsAAAADAAMAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAEAAAAYAAoAAAAAAAIAAAAYAAsAAAAAAAMAAAAZAAgAAAABAAAAAAAZAAkAAAABAAEAAAAZAAoAAAABAAIAAAAZAAsAAAABAAMAAAAaAAgAAAACAAAAAAAaAAkAAAACAAEAAAAaAAoAAAACAAIAAAAaAAsAAAACAAMAAAAbAAgAAAADAAAAAAAbAAkAAAADAAEAAAAbAAoAAAADAAIAAAAbAAsAAAADAAMAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAEAAAAYAA4AAAAAAAIAAAAYAA8AAAAAAAMAAAAZAAwAAAABAAAAAAAZAA0AAAABAAEAAAAZAA4AAAABAAIAAAAZAA8AAAABAAMAAAAaAAwAAAACAAAAAAAaAA0AAAACAAEAAAAaAA4AAAACAAIAAAAaAA8AAAACAAMAAAAbAAwAAAADAAAAAAAbAA0AAAADAAEAAAAbAA4AAAADAAIAAAAbAA8AAAADAAMAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAEAAAAUAA4AAAAAAAIAAAAUAA8AAAAAAAMAAAAVAAwAAAABAAAAAAAVAA0AAAABAAEAAAAVAA4AAAABAAIAAAAVAA8AAAABAAMAAAAWAAwAAAACAAAAAAAWAA0AAAACAAEAAAAWAA4AAAACAAIAAAAWAA8AAAACAAMAAAAXAAwAAAADAAAAAAAXAA0AAAADAAEAAAAXAA4AAAADAAIAAAAXAA8AAAADAAMAAAAQAAwAAAAAAAAAAAAQAA0AAAAAAAEAAAAQAA4AAAAAAAIAAAAQAA8AAAAAAAMAAAARAAwAAAABAAAAAAARAA0AAAABAAEAAAARAA4AAAABAAIAAAARAA8AAAABAAMAAAASAAwAAAACAAAAAAASAA0AAAACAAEAAAASAA4AAAACAAIAAAASAA8AAAACAAMAAAATAAwAAAADAAAAAAATAA0AAAADAAEAAAATAA4AAAADAAIAAAATAA8AAAADAAMAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAEAAAAMAA4AAAAAAAIAAAAMAA8AAAAAAAMAAAANAAwAAAABAAAAAAANAA0AAAABAAEAAAANAA4AAAABAAIAAAANAA8AAAABAAMAAAAOAAwAAAACAAAAAAAOAA0AAAACAAEAAAAOAA4AAAACAAIAAAAOAA8AAAACAAMAAAAPAAwAAAADAAAAAAAPAA0AAAADAAEAAAAPAA4AAAADAAIAAAAPAA8AAAADAAMAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAEAAAAIAA4AAAAAAAIAAAAIAA8AAAAAAAMAAAAJAAwAAAABAAAAAAAJAA0AAAABAAEAAAAJAA4AAAABAAIAAAAJAA8AAAABAAMAAAAKAAwAAAACAAAAAAAKAA0AAAACAAEAAAAKAA4AAAACAAIAAAAKAA8AAAACAAMAAAALAAwAAAADAAAAAAALAA0AAAADAAEAAAALAA4AAAADAAIAAAALAA8AAAADAAMAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAEAAAAEAA4AAAAAAAIAAAAEAA8AAAAAAAMAAAAFAAwAAAABAAAAAAAFAA0AAAABAAEAAAAFAA4AAAABAAIAAAAFAA8AAAABAAMAAAAGAAwAAAACAAAAAAAGAA0AAAACAAEAAAAGAA4AAAACAAIAAAAGAA8AAAACAAMAAAAHAAwAAAADAAAAAAAHAA0AAAADAAEAAAAHAA4AAAADAAIAAAAHAA8AAAADAAMAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAEAAAAAAA4AAAAAAAIAAAAAAA8AAAAAAAMAAAABAAwAAAABAAAAAAABAA0AAAABAAEAAAABAA4AAAABAAIAAAABAA8AAAABAAMAAAACAAwAAAACAAAAAAACAA0AAAACAAEAAAACAA4AAAACAAIAAAACAA8AAAACAAMAAAADAAwAAAADAAAAAAADAA0AAAADAAEAAAADAA4AAAADAAIAAAADAA8AAAADAAMAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAEAAAAcAA4AAAAAAAIAAAAcAA8AAAAAAAMAAAAdAAwAAAABAAAAAAAdAA0AAAABAAEAAAAdAA4AAAABAAIAAAAdAA8AAAABAAMAAAAeAAwAAAACAAAAAAAeAA0AAAACAAEAAAAeAA4AAAACAAIAAAAeAA8AAAACAAMAAAAfAAwAAAADAAAAAAAfAA0AAAADAAEAAAAfAA4AAAADAAIAAAAfAA8AAAADAAMAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAEAAAAcAAoAAAAAAAIAAAAcAAsAAAAAAAMAAAAdAAgAAAABAAAAAAAdAAkAAAABAAEAAAAdAAoAAAABAAIAAAAdAAsAAAABAAMAAAAeAAgAAAACAAAAAAAeAAkAAAACAAEAAAAeAAoAAAACAAIAAAAeAAsAAAACAAMAAAAfAAgAAAADAAAAAAAfAAkAAAADAAEAAAAfAAoAAAADAAIAAAAfAAsAAAADAAMAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAEAAAAcAAYAAAAAAAIAAAAcAAcAAAAAAAMAAAAdAAQAAAABAAAAAAAdAAUAAAABAAEAAAAdAAYAAAABAAIAAAAdAAcAAAABAAMAAAAeAAQAAAACAAAAAAAeAAUAAAACAAEAAAAeAAYAAAACAAIAAAAeAAcAAAACAAMAAAAfAAQAAAADAAAAAAAfAAUAAAADAAEAAAAfAAYAAAADAAIAAAAfAAcAAAADAAMAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAEAAAAcAAIAAAAAAAIAAAAcAAMAAAAAAAMAAAAdAAAAAAABAAAAAAAdAAEAAAABAAEAAAAdAAIAAAABAAIAAAAdAAMAAAABAAMAAAAeAAAAAAACAAAAAAAeAAEAAAACAAEAAAAeAAIAAAACAAIAAAAeAAMAAAACAAMAAAAfAAAAAAADAAAAAAAfAAEAAAADAAEAAAAfAAIAAAADAAIAAAAfAAMAAAADAAMAAAA=")
tile_set = SubResource("TileSet_l5jeb")

[node name="Terrain" type="TileMapLayer" parent="."]
material = SubResource("ShaderMaterial_o6862")
tile_map_data = PackedByteArray("AAAIAAgAAAAIAAEAAAAJAAgAAAAHAAAAAAAKAAgAAAAHAAAAAAALAAgAAAAHAAAAAAAMAAgAAAAHAAAAAAANAAgAAAAHAAAAAAAOAAgAAAAHAAAAAAAPAAgAAAAHAAAAAAAQAAgAAAAHAAAAAAARAAgAAAAHAAAAAAASAAgAAAAGAAEAAAATAAgAAAAHAAEAAAAUAAgAAAAHAAEAAAAVAAgAAAAHAAEAAAAWAAgAAAAIAAEAAAAXAAgAAAAIAAAAAAAHAAgAAAAGAAEAAAASAAcAAAAGAAAAAAATAAcAAAAHAAAAAAAUAAcAAAAHAAAAAAAVAAcAAAAHAAAAAAAWAAcAAAAIAAAAAAAIAAcAAAAIAAAAAAAHAAcAAAAGAAAAAAAHAAkAAAAGAAEAAAAHAAoAAAAGAAEAAAAHAAsAAAAGAAEAAAAHAAwAAAAGAAEAAAAHAA0AAAAGAAEAAAAXAAkAAAAIAAEAAAAXAAoAAAAIAAEAAAAXAAsAAAAIAAEAAAAXAAwAAAAIAAEAAAAXAA0AAAAIAAEAAAAXAA4AAAAIAAIAAAAHAA4AAAAGAAIAAAAIAA4AAAAHAAIAAAAJAA4AAAAHAAIAAAAKAA4AAAAHAAIAAAALAA4AAAAHAAIAAAAMAA4AAAAHAAIAAAANAA4AAAAHAAIAAAAOAA4AAAAHAAIAAAAPAA4AAAAHAAIAAAAQAA4AAAAHAAIAAAARAA4AAAAHAAIAAAASAA4AAAAHAAIAAAATAA4AAAAHAAIAAAAUAA4AAAAHAAIAAAAVAA4AAAAHAAIAAAAWAA4AAAAHAAIAAAAIAAkAAAAHAAEAAAAJAAkAAAAHAAEAAAAKAAkAAAAHAAEAAAALAAkAAAAHAAEAAAAMAAkAAAAHAAEAAAANAAkAAAAHAAEAAAAOAAkAAAAHAAEAAAAPAAkAAAAHAAEAAAAQAAkAAAAHAAEAAAARAAkAAAAHAAEAAAASAAkAAAAHAAEAAAATAAoAAAAHAAEAAAAUAAoAAAAHAAEAAAAVAAoAAAAHAAEAAAAVAAkAAAAHAAEAAAAWAAkAAAAHAAEAAAAUAAkAAAAHAAEAAAATAAkAAAAHAAEAAAAWAAoAAAAHAAEAAAAWAAsAAAAHAAEAAAAWAAwAAAAHAAEAAAAWAA0AAAAHAAEAAAAVAA0AAAAHAAEAAAAUAA0AAAAHAAEAAAATAA0AAAAHAAEAAAASAA0AAAAHAAEAAAARAA0AAAAHAAEAAAAQAA0AAAAHAAEAAAAPAA0AAAAHAAEAAAAOAA0AAAAHAAEAAAANAA0AAAAHAAEAAAAMAA0AAAAHAAEAAAALAA0AAAAHAAEAAAAKAA0AAAAHAAEAAAAJAA0AAAAHAAEAAAAIAA0AAAAHAAEAAAAIAAwAAAAHAAEAAAAIAAsAAAAHAAEAAAAIAAoAAAAHAAEAAAAJAAoAAAAHAAEAAAAKAAoAAAAHAAEAAAALAAoAAAAHAAEAAAAMAAoAAAAHAAEAAAANAAoAAAAHAAEAAAAOAAoAAAAHAAEAAAAPAAoAAAAHAAEAAAAQAAoAAAAHAAEAAAARAAoAAAAHAAEAAAASAAoAAAAHAAEAAAAUAAsAAAAHAAEAAAAVAAsAAAAHAAEAAAAVAAwAAAAHAAEAAAAUAAwAAAAHAAEAAAATAAwAAAAHAAEAAAASAAwAAAAHAAEAAAARAAwAAAAHAAEAAAAQAAwAAAAHAAEAAAAPAAwAAAAHAAEAAAAOAAwAAAAHAAEAAAANAAwAAAAHAAEAAAAMAAwAAAAHAAEAAAALAAwAAAAHAAEAAAAKAAwAAAAHAAEAAAAJAAwAAAAHAAEAAAAJAAsAAAAHAAEAAAAKAAsAAAAHAAEAAAALAAsAAAAHAAEAAAAMAAsAAAAHAAEAAAANAAsAAAAHAAEAAAAOAAsAAAAHAAEAAAAPAAsAAAAHAAEAAAAQAAsAAAAHAAEAAAARAAsAAAAHAAEAAAASAAsAAAAHAAEAAAATAAsAAAAHAAEAAAA=")
tile_set = SubResource("TileSet_v03er")

[node name="Player" parent="." instance=ExtResource("3_d6513")]
position = Vector2(191, 99)

[node name="CollectableBlock1" parent="." instance=ExtResource("5_udxbi")]
position = Vector2(312, 102)

[node name="CollectableBlock2" parent="." instance=ExtResource("7_op5pl")]
position = Vector2(128, 103)

[node name="BuildMenu" type="MarginContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 0

[node name="Elements" type="HBoxContainer" parent="BuildMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer1" type="HBoxContainer" parent="BuildMenu/Elements"]
layout_mode = 2
size_flags_vertical = 0

[node name="Counter1" type="Label" parent="BuildMenu/Elements/HBoxContainer1"]
layout_mode = 2
text = "0"

[node name="Block1" type="TextureRect" parent="BuildMenu/Elements/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_stwhx")
stretch_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BuildMenu/Elements"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Counter2" type="Label" parent="BuildMenu/Elements/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="Block2" type="TextureRect" parent="BuildMenu/Elements/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_stwhx")
stretch_mode = 2

[node name="Choser" type="Sprite2D" parent="BuildMenu"]
position = Vector2(22, 11)
scale = Vector2(0.785714, 0.916667)
texture = ExtResource("8_cnjfs")
